--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -1,10 +1,12 @@
-<div class="mdl-grid app-content">
+
     <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
         <div class="pull-right">
-            <button data-toggle="modal" data-target="#modal-create-game" class="btn btn-primary">{{ 'create_game' | translate }}</button>
+            <button show-modal modal="modal-create-game" class="mdl-button mdl-button--colored mdl-button--raised mdl-js-button mdl-js-ripple-effect">
+                {{ 'create_game' | translate }}
+            </button>
         </div>
-        <div profile user="user">
-            <div class="pull-left img">
+        <div profile user="user" class="app-profile">
+            <div class="pull-left app-profile-image">
                 <img class="profile-picture" src="//graph.facebook.com/{{ user.uid }}/picture">
             </div>
             <div>
@@ -20,7 +22,6 @@
             </div>
         </div>
     </div>
-</div>
 
 <div class="content">
     <div class="row">
@@ -235,5 +236,47 @@
     </div>
 </div>
 
-<div modal-create-game class="modal fade" id="modal-create-game"></div>
+<div id="modal-create-game" class="modal modal__bg" role="dialog" aria-hidden="true">
+    <div class="modal__dialog">
+      <div class="modal__content">
+        <form class="form-horizontal" role="form">
+            <div class="form-group">
+                <label for="create-game-color" class="col-sm-2 control-label">{{ 'color'|translate }}</label>
+                <div class="col-sm-8">
+                    <select ng-model="game.color" id="create-game-color" class="form-control">
+                        <option ng-repeat="color in paramsGame.colors" value="{{ color }}">{{ color|translate }}</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="create-game-time" class="col-sm-2 control-label">{{ 'time'|translate }}</label>
+                <div class="col-sm-8">
+                    <select ng-model="game.time" id="create-game-time" class="form-control">
+                        <option ng-repeat="time in paramsGame.times" value="{{ time }}">{{ time / 60 }} {{ 'minutes'|translate }}</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="create-game-points-min" class="col-sm-2 control-label">{{ 'points'|translate }}</label>
+                <div class="col-sm-4">
+                    <select ng-model="game.pointsMin" id="create-game-points-min" class="form-control">
+                        <option value="0">{{ 'min'|translate }}</option>
+                        <option ng-repeat="pointsMin in paramsGame.pointsMin" value="{{ pointsMin }}">{{ pointsMin }}</option>
+                    </select>
+                </div>
+                <div class="col-sm-4">
+                    <select ng-model="game.pointsMax" id="create-game-points-max" class="form-control">
+                        <option value="0">{{ 'max'|translate }}</option>
+                        <option ng-repeat="pointsMax in paramsGame.pointsMax" value="{{ pointsMax }}">{{ pointsMax }}</option>
+                    </select>
+                </div>
+            </div>
+        </form>
+        <div class="mdl-dialog__actions">
+            <button modal-close type="button" class="mdl-button mdl-button--raised close">{{ 'cancel'|translate }}</button>
+            <button modal-close type="button" class="mdl-button mdl-button--raised mdl-button--colored close">{{ 'create_game'|translate }}</button>
+        </div>
+      </div>
+    </div>
+</div>
 <div modal-challenge class="modal fade" id="modal-challenge"></div>
