--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -23,193 +23,57 @@
     </div>
 </div>
 
-<div class="content">
-    <div class="row">
-        <div class="col-md-10">
-            <div class="element">
-                <h2>
-                    <span>{{ 'games'|translate }}</span>
-                    <span class="info-tooltip">{{ filteredCreatedGames.length || 0 }}</span>
-                    <div class="pull-right">
-                        <div dropdown-filter-game class="btn-right"></div>
-                        <div toggle-element class="btn-right"></div>
-                    </div>
-                </h2>
-                <section>
-                    <table ng-show="filteredCreatedGames.length"
-                           class="list-user table table-striped">
-                        <thead>
-                            <tr>
-                                <th class="img"></th>
-                                <th class="name"></th>
-                                <th sortable="points" class="info-user"></th>
-                                <th sortable="ranking" class="info-user"></th>
-                                <th sortable="color" class="info-game"></th>
-                                <th sortable="time" class="info-game"></th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="game in filteredCreatedGames = (createdGames | orderBy:predicate:reverse | filter:filtersGame())">
-                                <td><img class="profile-picture" ng-src="//graph.facebook.com/{{game.uid}}/picture"></td>
-                                <td>
-                                    <span class="user-name">{{ game.name }}</span>
-                                </td>
-                                <td class="text-center">{{ game.points }}</td>
-                                <td class="text-center">{{ game.ranking }}</td>
-                                <td class="text-center">
-                                    <span class="color">
-                                        <span class="icon-{{ game.color }} icon-king"></span>
-                                    </span>
-                                </td>
-                                <td class="text-center">{{ game.time / 60 }}:00</td>
-                                <td class="text-right">
-                                    <button ng-if="game.uid == user.uid" ng-click="removeGame()" class="btn btn-sm btn-icon btn-default">
-                                        <span class="icon icon-close"></span>
-                                    </button>
-                                    <button ng-if="game.uid != user.uid" ng-click="startGame(game.uid)" class="btn btn-sm btn-icon btn-success">
-                                        <span class="icon icon-valid"></span>
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div ng-show="!filteredCreatedGames.length" class="load-spin">
-                        <img src="/images/load-spin.svg">
-                    </div>
-                </section>
-            </div>
-            <div ng-if="challenges.length" class="element">
-                <h2>
-                    <span>{{ 'challenges'|translate }}</span>
-                    <span class="info-tooltip">{{ challenges.length }}</span>
-                    <div class="pull-right">
-                        <div toggle-element class="btn-right"></div>
-                    </div>
-                </h2>
-                <section>
-                    <table class="list-user table table-striped">
-                        <thead>
-                            <tr>
-                                <th class="img"></th>
-                                <th class="name"></th>
-                                <th sortable="points" class="info-user"></th>
-                                <th sortable="ranking" class="info-user"></th>
-                                <th sortable="color" class="info-game"></th>
-                                <th sortable="time" class="info-game"></th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="challenge in challenges | orderBy:predicate:reverse">
-                                <td><img class="profile-picture" ng-src="//graph.facebook.com/{{ challenge.uid }}/picture"></td>
-                                <td>{{ challenge.name }}</td>
-                                <td class="text-center">{{ challenge.points }}</td>
-                                <td class="text-center">{{ challenge.ranking }}</td>
-                                <td class="text-center">
-                                    <span class="color">
-                                        <span class="icon-{{ challenge.color }} icon-king"></span>
-                                    </span>
-                                </td>
-                                <td class="text-center">{{ challenge.time / 60 }}:00</td>
-                                <td class="text-right">
-                                    <button ng-click="removeChallenge(challenge.uid)" class="btn btn-sm btn-icon btn-default">
-                                        <span class="icon icon-close"></span>
-                                    </button>
-                                    <button ng-if="!challenge.create" ng-click="startChallenge(challenge.uid)" class="btn btn-sm btn-icon btn-success">
-                                        <span class="icon icon-valid"></span>
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </section>
-            </div>
-            <div class="element">
-                <h2>
-                    <span>{{ 'challengers'|translate }}</span>
-                    <span class="info-tooltip">{{ filteredChallengers.length || 0 }}</span>
-                    <div class="pull-right">
-                        <div dropdown-filter-challenger class="btn-right"></div>
-                        <div toggle-element class="btn-right"></div>
-                    </div>
-                </h2>
-                <section>
-                    <table ng-show="filteredChallengers.length"
-                           class="list-user table table-striped">
-                        <thead>
-                            <tr>
-                                <th class="img"></th>
-                                <th class="name"></th>
-                                <th sortable="points" class="info-user"></th>
-                                <th sortable="ranking" class="info-user"></th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="challenger in filteredChallengers = (challengers | orderBy:predicate:reverse | filter:filtersChallenger())">
-                                <td><img class="profile-picture" ng-src="//graph.facebook.com/{{ challenger.uid }}/picture"></td>
-                                <td>{{ challenger.name }}</td>
-                                <td class="text-center">{{ challenger.points }}</td>
-                                <td class="text-center">{{ challenger.ranking }}</td>
-                                <td class="text-right">
-                                    <button ng-if="challenger.uid != user.uid"
-                                            ng-click="openModalChallenge(challenger)"
-                                            data-toggle="modal" 
-                                            data-target="#modal-challenge"
-                                            class="btn btn-primary btn-sm">
-                                            {{ 'challenge'|translate }}
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div ng-show="!filteredChallengers.length" class="load-spin">
-                        <img src="/images/load-spin.svg">
-                    </div>
-                </section>
-            </div>
-            <div ng-if="friends.length" class="element">
-                <h2>
-                    <span>{{ 'friends'|translate }}</span>
-                    <span class="info-tooltip">{{ friends.length }}</span>
-                    <div class="pull-right">
-                        <div toggle-element class="btn-right"></div>
-                    </div>
-                </h2>
-                <section>
-                    <table class="list-user table table-striped">
-                        <thead>
-                            <tr>
-                                <th class="img"></th>
-                                <th class="name"></th>
-                                <th sortable="points" class="info-user"></th>
-                                <th sortable="ranking" class="info-user"></th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="friend in friends | orderBy:predicate:reverse">
-                                <td><img class="profile-picture" ng-src="//graph.facebook.com/{{ friend.uid }}/picture"></td>
-                                <td>{{ friend.name }}</td>
-                                <td class="text-center">{{ friend.points }}</td>
-                                <td class="text-center">{{ friend.ranking }}</td>
-                                <td class="text-right">
-                                    <button ng-if="friend.uid != user.uid"
-                                            ng-click="openModalChallenge(friend)"
-                                            data-toggle="modal" 
-                                            data-target="#modal-challenge"
-                                            class="btn btn-primary btn-sm">
-                                            {{ 'challenge'|translate }}
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </section>
-            </div>
+<div element class="app-element mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+    <div class="app-element-head">
+        <span>{{ 'games'|translate }}</span>
+        <span class="info-tooltip">{{ filteredCreatedGames.length || 0 }}</span>
+        <div class="pull-right">
+            <dropdown-filter-game></dropdown-filter-game>
+            <element-toggle></element-toggle>
         </div>
-        <div class="col-md-2" col-right></div>
+    </div>
+    <div element-content class="app-element-body">
+        <table ng-show="filteredCreatedGames.length"
+               class="list-user table table-striped">
+            <thead>
+                <tr>
+                    <th class="img"></th>
+                    <th class="name"></th>
+                    <th sortable="points" class="info-user"></th>
+                    <th sortable="ranking" class="info-user"></th>
+                    <th sortable="color" class="info-game"></th>
+                    <th sortable="time" class="info-game"></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="game in filteredCreatedGames = (createdGames | orderBy:predicate:reverse | filter:filtersGame())">
+                    <td><img class="profile-picture" ng-src="//graph.facebook.com/{{game.uid}}/picture"></td>
+                    <td>
+                        <span class="user-name">{{ game.name }}</span>
+                    </td>
+                    <td class="text-center">{{ game.points }}</td>
+                    <td class="text-center">{{ game.ranking }}</td>
+                    <td class="text-center">
+                        <span class="color">
+                            <span class="icon-{{ game.color }} icon-king"></span>
+                        </span>
+                    </td>
+                    <td class="text-center">{{ game.time / 60 }}:00</td>
+                    <td class="text-right">
+                        <button ng-if="game.uid == user.uid" ng-click="removeGame()" class="btn btn-sm btn-icon btn-default">
+                            <span class="icon icon-close"></span>
+                        </button>
+                        <button ng-if="game.uid != user.uid" ng-click="startGame(game.uid)" class="btn btn-sm btn-icon btn-success">
+                            <span class="icon icon-valid"></span>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div ng-show="!filteredCreatedGames.length" class="load-spin">
+            <img src="/images/load-spin.svg">
+        </div>
     </div>
 </div>
 
@@ -234,7 +98,6 @@
                 <div class="mui-select">
                     <div class="mdl-grid">
                         <select ng-model="game.pointsMin"
-                                ng-init="paramsGame.pointsMin[] = " 
                                 ng-options="value as value for (key, value) in paramsGame.pointsMin" 
                                 id="create-game-points" 
                                 class="mdl-cell--6-col">
