--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -1,4 +1,3 @@
-
 <div class="app-home-head mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <div profile user="user" class="app-profile">
         <div class="pull-left">
@@ -95,7 +94,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="challenge in challenges | orderBy:orderByChallenges">
+                <tr ng-repeat="challenge in challenges">
                     <td class="app-element-table-user mdl-data-table__cell--non-numeric">
                         <img class="app-element-table-user-picture" ng-src="//graph.facebook.com/{{challenge.uid}}/picture">
                         <span class="app-element-table-user-name">{{ challenge.name }}</span>
@@ -120,7 +119,6 @@
     </div>
 </div>
 
-
 <div element class="app-element mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <div class="app-element-head">
         <span>{{ 'challengers'|translate }}</span>
@@ -130,7 +128,8 @@
         </div>
     </div>
     <div element-content class="app-element-body">
-        <table class="app-element-table mdl-data-table mdl-js-data-table">
+        <table ng-show="challengers.length"
+               class="app-element-table mdl-data-table mdl-js-data-table">
             <thead>
                 <tr>
                     <th></th>
@@ -140,7 +139,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="challenger in challengers | orderBy:orderByChallengers">
+                <tr ng-repeat="challenger in challengers">
                     <td class="app-element-table-user mdl-data-table__cell--non-numeric">
                         <img class="app-element-table-user-picture" ng-src="//graph.facebook.com/{{challenger.uid}}/picture">
                         <span class="app-element-table-user-name">{{ challenger.name }}</span>
@@ -148,8 +147,9 @@
                     <td>{{ challenger.points }}</td>
                     <td>{{ challenger.ranking }}</td>
                     <td>
-                        <button ng-if="challenger.uid != user.uid"
-                                ng-click="openModalChallenge(challenger)"
+                        <button ng-if="challenger.uid !== user.uid"
+                                ng-click="setChallenger(challenger)"
+                                show-modal modal="modal-challenger"
                                 class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
                             <i class="material-icons">check</i>
                         </button>
@@ -160,6 +160,48 @@
         <div ng-show="!challengers.length" class="load-spin">
             <img src="/images/load-spin.svg">
         </div>
+    </div>
+</div>
+
+<div element 
+     ng-if="friends.length"
+     class="app-element mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+    <div class="app-element-head">
+        <span>{{ 'friends'|translate }}</span>
+        <span class="info-tooltip">{{ friends.length }}</span>
+        <div class="app-element-tools">
+            <element-toggle></element-toggle>
+        </div>
+    </div>
+    <div element-content class="app-element-body">
+        <table class="app-element-table mdl-data-table mdl-js-data-table">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th sortable collection="friends" expression="['points', 'ranking']" icon="points"></th>
+                    <th sortable collection="friends" expression="['ranking', 'points']" icon="ranking"></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="friend in friends">
+                    <td class="app-element-table-user mdl-data-table__cell--non-numeric">
+                        <img class="app-element-table-user-picture" ng-src="//graph.facebook.com/{{friend.uid}}/picture">
+                        <span class="app-element-table-user-name">{{ friend.name }}</span>
+                    </td>
+                    <td>{{ friend.points }}</td>
+                    <td>{{ friend.ranking }}</td>
+                    <td>
+                        <button ng-if="friend.uid !== user.uid"
+                                ng-click="setChallenger(friend)"
+                                show-modal modal="modal-challenger"
+                                class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+                            <i class="material-icons">check</i>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
 
@@ -206,4 +248,45 @@
     </div>
 </div>
 
-<div modal-challenge class="modal fade" id="modal-challenge"></div>
+<div id="modal-challenger" class="modal modal__bg" role="dialog" aria-hidden="true">
+    <div class="modal__dialog">
+        <div class="modal__content">
+            <div class="app-profile app-profile--challenger">
+                <div class="pull-left">
+                    <img class="app-profile-image" src="//graph.facebook.com/{{ challenger.uid }}/picture">
+                </div>
+                <div class="app-profile-name">
+                    <a class="app-profile-name" href>{{ challenger.name }}</a>
+                </div>
+                <div class="app-profile-info">
+                    <span class="icon icon-ranking"></span>
+                    <span>{{ challenger.ranking }}</span>
+                </div>
+                <div class="app-profile-info">
+                    <span class="icon icon-points"></span>
+                    <span>{{ challenger.points }}</span>
+                </div>
+            </div>
+            <form ng-submit="challenge(challenger.uid)" role="form">
+                <div class="mui-select">
+                    <select ng-model="game.color" 
+                            ng-options="value as value|translate for (key, value) in paramsGame.colors" 
+                            id="create-game-color">
+                    </select>
+                    <label for="create-game-color">{{ 'color'|translate }}</label>
+                </div>
+                <div class="mui-select">
+                    <select ng-model="game.time"
+                            ng-options="value as (value / 60) + ' ' + 'minutes'|translate for (key, value) in paramsGame.times" 
+                            id="create-game-time">
+                    </select>
+                    <label for="create-game-time">{{ 'time'|translate }}</label>
+                </div>
+                <div class="modal__actions">
+                    <button modal-close type="reset" class="mdl-button mdl-button--raised close">{{ 'cancel'|translate }}</button>
+                    <button modal-close type="submit" class="mdl-button mdl-button--raised mdl-button--colored close">{{ 'ok'|translate }}</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
